# 2026

./: README.md  constants.py  pyproject.toml  robot.py  simgui-ds.json
.github/: copilot-instructions.md
autonomous/: README.md  choreo_auto.py  choreo_examples.py  just_leave.py
components/: __init__.py  controllers.py  shooter.py  swerve.py
deploy/choreo/: DriveToNeutralZone.traj  README.md  TestAutoModes.chor
