[project]
name = "test1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"

# Packages installed by `uv sync` in your local .venv;
# these are NOT deployed to RoboRIO by `robotpy deploy`.
dependencies = [
    "robotpy==2025.3.2.2",
    "sleipnirgroup-choreolib",
    "phoenix6",
]

[tool.robotpy]
robotpy_version = "2025.3.2.2"

# Extra RobotPy components to install, locally (via `robotpy sync`) and on the RoboRIO (via `robotpy deploy`).
robotpy_extras = [
    # "all",
    "apriltag",
    # "commands2",
    # "cscore",
    # "navx",
    "pathplannerlib",
    "phoenix6",
    # "rev",
    # "romi",
    "sim",
    # "xrp",
    "sleipnirgroup-choreolib",
]

# Other python packages to install ON the RoboRIO
requires = []

[tool.ruff]
line-length = 120 # Allow much longer lines before forcing line wrap via formatting
src = ["."]

# Specify the generic rulesets and specific rules for Ruff to enforce
select = [
    "I",    # Sort imports
    "D",    # pydocstyle
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "D200",  # One-line docstring should fit on one line
    "D201",  # No blank lines before docstring
    "D202",  # No blank lines after docstring
    "D210",  # No whitespace before docstring text
    "D400",  # First line should end with period
    "D415",  # First line should end with period, question mark, or exclamation point
]


ignore = [
    "N802"   # Allow camelCase function names (required for MagicBot)
]


[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
