[project]
name = "test1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"

# Packages installed by `uv sync` in your local .venv;
# these are NOT necessarily deployed to RoboRIO by `robotpy deploy`.
# NOTE: robotpy extras and vendor packages are duplicated here from components/requires below
# so that `uv sync` does not remove packages later installed by `robotpy sync`.
dependencies = [
    "robotpy[apriltag,sim]>=2026.1.1",
    "phoenix6",
    "sleipnirgroup-choreolib",
]

[tool.robotpy]
robotpy_version = "2026.2.1"

# Extra RobotPy components to install locally (via `robotpy sync`) and on the RoboRIO (via `robotpy deploy`).
# NOTE: 'robotpy_extras' was renamed to 'components' in RobotPy 2026.1.1
# Only actual robotpy extras go here (apriltag, commands2, cscore, sim, etc.)
components = [
    # "all",
    "apriltag",
    # "commands2",
    # "cscore",
    # "navx",
    # "rev",
    # "romi",
    "sim",
    # "xrp",
]

# Python packages to install ON the RoboRIO during `robotpy deploy`
requires = [
    "phoenix6",
    "sleipnirgroup-choreolib",
]

[tool.ruff]
line-length = 120 # Allow much longer lines before forcing line wrap via formatting
src = ["."]

# Specify the generic rulesets and specific rules for Ruff to enforce
select = [
    "I",    # Sort imports
    "D",    # pydocstyle
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "D200",  # One-line docstring should fit on one line
    "D201",  # No blank lines before docstring
    "D202",  # No blank lines after docstring
    "D210",  # No whitespace before docstring text
    "D400",  # First line should end with period
    "D415",  # First line should end with period, question mark, or exclamation point
]


ignore = [
    "N802"   # Allow camelCase function names (required for MagicBot)
]


[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
